plugin/global/styles/quick-button.css
#plugin-quick-button {
    position: fixed;
    display: grid;
    grid-template-columns: repeat(${colCount}, 1fr);
    grid-template-rows: repeat(${rowCount}, 1fr);
    gap: 10px;
    right: 30px;
    bottom: 50px;
    z-index: 9998;
    font-size: 28px;
    text-align: center;
    color: var(--active-file-border-color);
}

#plugin-quick-button .action-item {
    width: 35px;
    height: 35px;
    cursor: pointer;
    box-shadow: rgba(0, 0, 0, 0.15) 0 0 8px;
    border-radius: 4px;
}

#plugin-quick-button .action-item:hover {
    background-color: var(--item-hover-bg-color);
}

#plugin-quick-button .action-item i {
    display: block;
    line-height: 35px;
}

#plugin-quick-button .unused, .plu-hidden {
    visibility: hidden;
}

